# MoDVPN

./: .gitignore  Build.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  NetworkDependency.md  README.md  SECURITY.md  modvpn.conf.toml
metadata/en-US/: full_description.txt  title.txt
modvpn-android/: README.md  settings.gradle.kts
modvpn-android/app/: build.gradle.kts
modvpn-android/app/src/androidTest/kotlin/app/upvpn/upvpn/: ExampleInstrumentedTest.kt
modvpn-android/app/src/debug/res/values/: strings.xml
modvpn-android/app/src/main/: AndroidManifest.xml
modvpn-android/app/src/main/kotlin/app/upvpn/upvpn/: MainActivity.kt  VPNApplication.kt
modvpn-android/app/src/main/kotlin/app/upvpn/upvpn/data/: AppContainer.kt  CountryMapResource.kt  VPNRepository.kt  VPNSessionRepository.kt  VPNSessionWatcher.kt  VpnSessionReclaimer.kt
modvpn-android/app/src/main/kotlin/app/upvpn/upvpn/data/db/: Device.kt  DeviceDao.kt  DeviceExtension.kt  Location.kt  LocationDao.kt  LocationExtension.kt  User.kt  UserDao.kt  VPNDatabase.kt  VpnSession.kt  VpnSessionDao.kt
modvpn-android/app/src/main/kotlin/app/upvpn/upvpn/model/: Country.kt  CustomSerializers.kt  LocationExtension.kt  Types.kt  VPNNotification.kt
modvpn-android/app/src/main/kotlin/app/upvpn/upvpn/network/: ApiError.kt  ApiResponseExtension.kt  AuthInterceptor.kt  VPNApiService.kt
modvpn-android/app/src/main/kotlin/app/upvpn/upvpn/notification/: VPNNotificationManager.kt  VPNStateNotification.kt
modvpn-android/app/src/main/kotlin/app/upvpn/upvpn/service/: VPNOrchestrator.kt  VPNService.kt  VPNState.kt
modvpn-android/app/src/main/kotlin/app/upvpn/upvpn/service/client/: VPNInAppNotificationManager.kt  VPNManager.kt  VPNServiceClient.kt  VPNServiceConnectionManager.kt
modvpn-android/app/src/main/kotlin/app/upvpn/upvpn/service/ipc/: Event.kt  MessageHandler.kt  OrchestratorMessage.kt  Request.kt
modvpn-android/app/src/main/kotlin/app/upvpn/upvpn/service/ipc/extensions/: EventExtensions.kt  MessageExtensions.kt  MessengerExtensions.kt  OrchestratorMessageExtensions.kt  RequestExtensions.kt  ResultExtensions.kt
modvpn-android/app/src/main/kotlin/app/upvpn/upvpn/ui/: VPNApp.kt  VPNAppViewModelProvider.kt
modvpn-android/app/src/main/kotlin/app/upvpn/upvpn/ui/components/: AllLocations.kt  CountryComponent.kt  CountryIcon.kt  LocationComponent.kt  LocationSelector.kt  LocationsError.kt  LocationsLoading.kt  SearchBar.kt  VPNLayout.kt
modvpn-android/app/src/main/kotlin/app/upvpn/upvpn/ui/screens/: HomeScreen.kt  LocationScreen.kt  SettingsScreen.kt  SignInScreen.kt
modvpn-android/app/src/main/kotlin/app/upvpn/upvpn/ui/state/: Extentions.kt  HomeUiState.kt  LocationUiState.kt  SignInUiState.kt  SignOutUiState.kt
modvpn-android/app/src/main/kotlin/app/upvpn/upvpn/ui/theme/: Color.kt  Theme.kt
modvpn-android/app/src/main/kotlin/app/upvpn/upvpn/ui/viewmodels/: HomeViewModel.kt  LocationViewModel.kt  SignInViewModel.kt
modvpn-android/app/src/main/kotlin/app/upvpn/upvpn/util/: Utils.kt
modvpn-android/app/src/main/res/values/: strings.xml  themes.xml
modvpn-android/app/src/test/kotlin/app/upvpn/upvpn/: ExampleUnitTest.kt
modvpn-android/app/tunnel/libwg-go/: jni.c
modvpn-cli/: Cargo.toml
modvpn-cli/src/: cli.rs
modvpn-cli/src/commands/: connect.rs  disconnect.rs  error.rs  locations.rs  sign_in.rs  sign_out.rs  status.rs
modvpn-config/: Cargo.toml  build.rs
modvpn-config/src/: lib.rs
modvpn-controller/: Cargo.toml  build.rs
modvpn-controller/proto/: upvpn-controller.proto
modvpn-controller/src/: auth.rs  lib.rs
modvpn-controller/src/conversions/: account.rs  location.rs  notification.rs  vpn_status.rs
modvpn-daemon/: Cargo.toml  modvpn.conf.toml
modvpn-daemon/src/: cleanup.rs  controller.rs  daemon.rs  db.rs  lib.rs  location_storage.rs  logging.rs  macos.rs  main.rs  runtime.rs  shutdown.rs  state.rs  system_service.rs  token_storage.rs  tunnel.rs  unique.rs
modvpn-daemon/src/device/: handler.rs  init.rs  mod.rs  storage.rs
modvpn-daemon/src/vpn_session/: handler.rs  reclaimer.rs  storage.rs  watcher.rs
modvpn-entity/: Cargo.toml
modvpn-entity/src/conversions/: device.rs  location.rs
modvpn-migration/: Cargo.toml
modvpn-migration/src/: main.rs
modvpn-packages/: Cargo.toml  Dockerfile  Makefile.toml  modvpn-oss-licenses-footer.hbs  modvpn-oss-licenses-header.hbs
modvpn-packages/linux/: modvpn.desktop
modvpn-packages/linux/debian/maintainer-scripts/: postrm  preinst  prerm
modvpn-packages/linux/unit-scripts/: modvpn-daemon.service
modvpn-packages/macos/: build.sh
modvpn-packages/macos/pkg/: Distribution
modvpn-packages/macos/pkg/Resources/: welcome.html
modvpn-packages/macos/pkg/root/Applications/upvpn.app/Contents/: Info.plist
modvpn-packages/macos/pkg/root/Applications/upvpn.app/Contents/Resources/: uninstall.sh
modvpn-packages/macos/pkg/scripts/: postinstall  preinstall
modvpn-packages/windows/: modvpn.wsx  sign.sh
modvpn-server/: Cargo.toml  build.rs
modvpn-server/proto/: modvpn-server.proto
modvpn-server/src/: lib.rs
modvpn-server/src/conversions/: device.rs  location.rs  vpn_session.rs
modvpn-types/: Cargo.toml
modvpn-types/src/: device.rs  lib.rs  wireguard.rs
modvpn-ui/: .env  .env.production  README.md  package-lock.json  package.json  vite.config.ts
modvpn-ui/src-tauri/: Cargo.toml  icons  modvpn.conf.toml  tauri.conf.json
modvpn-ui/src-tauri/src/: event_forwarder.rs  main.rs  state.rs  system_tray.rs
modvpn-ui/src-tauri/src/commands/: auth.rs  daemon_online.rs  desktop_notification.rs  file_ops.rs  location.rs  notification.rs  version.rs  vpn_session.rs
modvpn-ui/src/assets/: license.html
modvpn-ui/src/components/: Hero.tsx  RecentLocations.tsx
modvpn-ui/src/lib/: util.ts
modvpn-ui/src/pages/: Settings.tsx  SignIn.tsx
