[workspace]
resolver = "2"
members = [
    "modvpn-cli",
    "modvpn-config",
    "modvpn-controller",
    "modvpn-daemon",
    "modvpn-entity",
    "modvpn-migration",
    "modvpn-packages",
    "modvpn-server",
    "modvpn-types",
    "modvpn-ui/src-tauri",
]

[profile.release]
#opt-level = 'z'     # Optimize for size.
opt-level = 3
lto = true          # Enable Link Time Optimization
#codegen-units = 1   # Reduce number of codegen units to increase optimizations.
#panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
