[package]
name = "modvpn-cli"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0"
authors = ["modvpn LLC"]
description = "Cli to manage VPN session via modvpn daemon"
homepage = "https://modvpn.app"
repository = "https://github.com/modvpn/modvpn-app"

[[bin]]
name = "modvpn"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.74"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "signal"] }
validator = { version = "0.16.1", features = ["derive"] }
modvpn-controller = {path = "../modvpn-controller"}
modvpn-types = {path = "../modvpn-types"}
thiserror = "1.0"
tonic = "0.9.2"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
indicatif = "0.17.7"
tokio-stream = { version = "0.1.14", features = ["sync"] }
console = "0.15.7"
