[package]
name = "modvpn-config"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0"
authors = ["modvpn LLC"]
homepage = "https://modvpn.app"
repository = "https://github.com/modvpn/modvpn-app"

[dependencies]
figment = { version = "0.10.12", features = ["env", "toml"] }
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.34", features = ["fs"] }

[build-dependencies]
toml = "0.8.8"
serde = "1.0"
