[package]
name = "modvpn-controller"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0"
authors = ["modvpn LLC"]
homepage = "https://modvpn.app"
repository = "https://github.com/modvpn/modvpn-app"

[dependencies]
futures = "0.3.29"
hyper = "0.14.27"
parity-tokio-ipc = "0.9.0"
prost = "0.11.9"
prost-types = "0.11.9"
thiserror = "1.0"
tokio = "1.34"
tonic = "0.9.2"
tower = "0.4.13"
modvpn-config = { path = "../modvpn-config" }
modvpn-types = {path = "../modvpn-types"} # grpc types to modvpn-types conversions
chrono = { version = "0.4.31", features = ["serde"] }

[build-dependencies]
tonic-build = "0.9.2"
