[package]
name = "modvpn-migration"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0"
authors = ["modvpn LLC"]
homepage = "https://modvpn.app"
repository = "https://github.com/modvpn/modvpn-app"

[lib]
name = "modvpn_migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.11.2"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  # "sqlx-postgres",         # `DATABASE_DRIVER` feature
  "sqlx-sqlite",
]
