[package]
name = "modvpn-server"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0"
authors = ["modvpn LLC"]
homepage = "https://modvpn.app"
repository = "https://github.com/modvpn/modvpn-app"

[dependencies]
futures = "0.3.29"
hyper = "0.14.27"
prost = "0.11.9"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
# todo: handle certs: remove dependency on tls-roots
tonic = { version = "0.9.2", features = ["tls", "tls-roots"] }
tower = "0.4.13"
modvpn-config = { path = "../modvpn-config" }
modvpn-types = {path = "../modvpn-types"}
talpid-types = {git = "ssh://git@github.com/modvpn/mullvadvpn-app.git", rev = "2023.3.modvpn"}
uuid = { version = "1.3.1", features = ["serde", "v4"] }
# todo: use rustls? instead of OS TLS
reqwest = { version = "0.11.22", features = ["json"] }
ipnetwork = "0.20.0"
backoff = { version = "0.4.0", features = ["tokio"] }

[build-dependencies]
tonic-build = "0.9.2"

[dev-dependencies]
tokio = "1.34"
