[package]
name = "modvpn-types"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0"
authors = ["modvpn LLC"]
homepage = "https://modvpn.app"
repository = "https://github.com/modvpn/modvpn-app"

[dependencies]
tokio = "1.34"
modvpn-config = {path="../modvpn-config"}
talpid-types = {git = "ssh://git@github.com/modvpn/mullvadvpn-app.git", rev = "2023.3.modvpn"}
serde = { version = "1.0", features = ["derive"] }
ipnetwork = "0.20.0"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.3.1", features = ["serde", "v4"] }
thiserror = "1.0"
serde_yaml = "0.9"
ts-rs = { git = "https://github.com/Aleph-Alpha/ts-rs", rev = "b4ba8b81fd8833296e99285eae7608864c52e51e", features = ["serde-compat", "chrono-impl", "uuid-impl", "format"] }

