[package]
name = "modvpn-ui"
version = "0.1.0"
description = "modvpn app"
edition = "2021"
rust-version = "1.57"
publish = false
license = "GPL-3.0"
authors = ["modvpn LLC"]
homepage = "https://modvpn.app"
repository = "https://github.com/modvpn/modvpn-app"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.3", features = ["clipboard-all", "fs-all", "notification-all", "os-all", "shell-open", "system-tray", "window-all"] }
modvpn-controller = {path = "../../modvpn-controller"}
modvpn-types = {path = "../../modvpn-types"}
modvpn-config = {path = "../../modvpn-config"}
tokio-stream = "0.1.14"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
log = "^0.4"
tokio = { version = "1.34", features = ["time"] }
futures = "0.3.29"
thiserror = "1.0"
tonic = "0.9.2"
semver = "1.0.20"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
